--- a/index.html
+++ b/index.html
@@ -4,18 +4,24 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>CBG</title>
+  <title>Breakmake</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
-  <h1>Chromebook Games<\h1>
-  <p>Select a game or a directory</p>
+  <h1>Select Client Type</h1>
+  <p><a href="vanilla.html">Vanilla Eaglercraft</a></p>
+  <p><a href="clients.html">Eaglercraft Clients</a></p>
+  <p><a href="hackedclients.html">Eaglercraft Hacks</a></p>
+  <p><a href=https://drive.google.com/drive/folders/1u1lCDoRRd60XksizXva3KviKrPg1Fkuf>Texture Packs (1.8.8 Only)</a></p>
+  <br>
+  <p>Or, If you want to play the original Deaglecraft, click <a href="152van.html">here</a>. </p>
   <br>
   <br>
-  <br>
-  <p><a href="breakmake.html">Breakmake (Eaglercraft)</a></p>
-  <p><a href="FNAW.html">Five Nights at Winston's</a></p>
+  <h3>What is Breakmake?</h3>
+  <p>Brakemake is the successor to Deaglecraft, which was my original version of Chromebook Minecraft. For this version, because it will probably be my last one, I decided to go all out. With 16 vesions of playable Minecraft, this is my biggest Eaglercraft Project yet.</p>
+  <p> You should also play Five Nights At Winstons.</p>
+  <p><a href="FNAW.html">Play FNAW</a></p>
 </body>
 
 </html>
