--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <h1>Select Game Type</h1>
   <p><a href="breakmake.html">Eaglercraft (Minecraft)</a></p>
-  <p><a href="clients.html">Five Nights at Winston's</a></p>
+  <p><a href="FNAW.html">Five Nights at Winston's</a></p>
 </body>
 
 </html>
