--- a/clients.html
+++ b/clients.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Clients - Breakmake</title>
+  <title>Clients - CBG</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <h1>Clients</h1>
