--- a/hackedclients.html
+++ b/hackedclients.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Hacked Clients - Breakmake</title>
+  <title>Hacked Clients - CBG</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <h1>Hacked Clients</h1>
