--- a/vex.html
+++ b/vex.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+<html>
 
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Vex - CBG</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+</head>
+
+<body>
+  <h1>Select Game Type</h1>
+  <p><a href="vex3.html">Vex 3</p>
+  <p><a href="vex4.html">Vex 4</a></p>
+  <p><a href="vex5.html">Vex 5</a></p>
+  <p><a href="vex6.html">Vex 6</a></p>
+  <p><a href="vex7.html">Vex 7</a></p>
+  <p><a href="vex8.html">Vex 8</a></p>
+
+</body>
+
+</html>
