--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <p><a href="breakmake.html">Eaglercraft (Minecraft)</a></p>
   <p><a href="FNAW.html">Five Nights at Winston's</a></p>
   <p><a href="geometrydash.html">Geometry Dash</a></p>  
-
+  <p><a href="vex.html">Vex</a></p>
 </body>
 
 </html>
