--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <p><a href="FNAW.html">Five Nights at Winston's</a></p>
   <p><a href="geometrydash.html">Geometry Dash</a></p>  
   <p><a href="vex.html">Vex</a></p>
+  <p><a href="1v1lol.html">1v1.lol</a></p>
 </body>
 
 </html>
