--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
   <p><a href="geometrydash.html">Geometry Dash</a></p>  
   <p><a href="vex.html">Vex</a></p>
   <p><a href="1v1lol.html">1v1.lol</a></p>
+  <p><a href="slope.html">Slope</a></p>
+  <p><a href="run3.html">Run 3</a></p>
 </body>
 
 </html>
