--- a/downloads/aboutblank.html
+++ b/downloads/aboutblank.html
@@ -5,6 +5,7 @@
   </head>
  
   <body>
+    <button>Fullscreen</button>
     <script>
       var urlObj = new window.URL(window.location.href);
       var url = "https://chromebookgames.github.io";
