--- a/downloads/aboutblank.html
+++ b/downloads/aboutblank.html
@@ -30,6 +30,10 @@
         };
       }
  
+    function myFunction() {
+      location.replace("https://classroom.google.com/h")
+}
+</script>
     </script>
   </body>
  
