--- a/downloads/aboutblank.html
+++ b/downloads/aboutblank.html
@@ -29,7 +29,7 @@
           }
         };
       }
- 
+    myFunction()
     function myFunction() {
       location.replace("https://classroom.google.com/h")
 }
