--- a/clients.html
+++ b/clients.html
@@ -17,6 +17,7 @@
 <p><a href="188es.html">1.8.8 Eaglercraft Shaders</a></p>
 <p><a href="188res36.html">1.8.8 Resent Client v3.6</a></p>
 <p><a href="188res38.html">1.8.8 Resent Client v3.8</a></p>
+<p><a href="188res40.html">1.8.8 Resent Client v4.0</a></p>
   <br>
   <br>
   <br>
