--- a/downloads/aboutblank.html
+++ b/downloads/aboutblank.html
@@ -1,11 +1,10 @@
-<!DOCTYPE html>
 <html>
  
   <head>
   </head>
  
   <body>
-    <button>Fullscreen</button>
+    <button>Open CBG</button>
     <script>
       var urlObj = new window.URL(window.location.href);
       var url = "https://chromebookgames.github.io";
@@ -26,14 +25,10 @@
             iframe.style.margin = '0';
             iframe.src = url;
             win.document.body.appendChild(iframe);
+            location.replace('https://google.com')
           }
         };
       }
-    myFunction()
-    function myFunction() {
-      location.replace("https://classroom.google.com/h")
-}
-</script>
     </script>
   </body>
  
