--- a/1v1lol.html
+++ b/1v1lol.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
-<!--Credits to ConwayTech-Dev for this code :)-->
 <html>
+
 <head>
-    <body style="margin:0">
-            <iframe style="display:block;width:100vw;height:100vh;border:none" src="https://google-opensocial.googleusercontent.com/gadgets/ifr?url=https://cdn.jsdelivr.net/gh/mind4ur/WPpluginsync@main/lib/edit/up.xml">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>1v1.lol - CBG</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+</head>
+
+<body>
+  <h1>Select Client Type</h1>
+  <p><a href="1v1lolnew.html">New Version</a></p>
+  <p><a href="1v1lolold.html">Old Version</a></p>
+</body>
+
 </html>
