--- a/slope.html
+++ b/slope.html
@@ -3,6 +3,5 @@
 <html>
 <head>
     <body style="margin:0">
-            <iframe style="display:block;width:100vw;height:100vh;border:none" src="https://google-opensocial.googleusercontent.com/gadgets/ifr?url=https://cdn.jsdelivr.net/gh/sk1bx/version@843c1a10f4bf78019b513ea7a8a8c3146f3dfa59/2slope.xml
-">
+            <iframe style="display:block;width:100vw;height:100vh;border:none" src="https://images-opensocial.googleusercontent.com/gadgets/ifr?url=https://cdn.jsdelivr.net/gh/sk1bx/WebStarterkit@27197d685502953065e3a3259b6e34f5acb94e65/src/sp1.5.xml&container=ig">
 </html>
