--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <p><a href="1v1lol.html">1v1.lol</a></p>
   <p><a href="slope.html">Slope</a></p>
   <p><a href="run3.html">Run 3</a></p>
+  <h1>Select Proxy</h1>
+  <p><a href="rh.html">Rammerhead</a></p>
 </body>
 
 </html>
