--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
   <p><a href="run3.html">Run 3</a></p>
   <h1>Select Proxy</h1>
   <p><a href="rh.html">Rammerhead</a></p>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <p>To prevent further blockages, download chromebookgames <a href="download.html">here</a>.</p>
 </body>
 
 </html>
