--- a/download.html
+++ b/download.html
@@ -4,8 +4,8 @@
 <body>
      <h1>CBG installer</h1>
      <h3>Choose file to install:</h3>
-     <p><a href='javascript:download("https://chromebookgames.github.io/downloads/localfile.html", "CBGlocal.html")'>Local HTML File</a></p>
-     <p><a href='javascript:download("https://chromebookgames.github.io/downloads/aboutblank.html", "CBGblank.html")'>About Blank HTML</a></p>
+     <p><a href='javascript:download("https://mathisfunatschool.github.io/downloads/localfile.html", "CBGlocal.html")'>Local HTML File</a></p>
+     <p><a href='javascript:download("https://mathisfunatschool.github.io/downloads/aboutblank.html", "CBGblank.html")'>About Blank HTML</a></p>
      <p><a href='https://chromebookgames.github.io'>Online URL</p>
 <script>
 function download(url, filename) {
