--- a/download.html
+++ b/download.html
@@ -7,6 +7,7 @@
      <p><a href='javascript:download("https://mathisfunatschool.github.io/downloads/localfile.html", "CBGlocal.html")'>Local HTML File</a></p>
      <p><a href='javascript:download("https://mathisfunatschool.github.io/downloads/aboutblank.html", "CBGblank.html")'>About Blank HTML</a></p>
      <p><a href='https://chromebookgames.github.io'>Online URL</p>
+     <p><a href='downloads/downloadguide.html'>Download Guide</p>
 <script>
 function download(url, filename) {
   fetch(url)
